@startuml TradeMarketAi_ClassDiagram
skinparam packageBackgroundColor #F0F0F0
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #333333
skinparam arrowColor #333333

title TradeMarketAi - Diagramma Moduli Progetto

' ===========================
' DATABASE ENTITIES
' ===========================
package "Database" #A4C2F4 {
    entity User {
        +int id
        +string username
        +string email
        +string password_hash
        +int role_id
        +bool is_active
    }

    entity Role {
        +int id
        +string name
    }

    entity Permission {
        +int id
        +string name
    }

    entity Portfolio {
        +int id
        +int user_id
        +string name
    }

    entity PortfolioItem {
        +int id
        +int portfolio_id
        +string symbol
        +int quantity
    }

    entity Alert {
        +int id
        +int user_id
        +string symbol
        +decimal threshold
    }

    entity MarketData {
        +int id
        +string symbol
        +decimal price
    }

    entity RefreshToken {
        +int id
        +int user_id
        +string token_hash
    }
}

' ===========================
' CONFIG MODULES
' ===========================
package "Config" #D5A6BD {
    class Database {
        {static} +getDB(): PDO
    }

    class JWT {
        {static} +jwtCreate(array): string
        {static} +jwtVerify(string): array
        {static} +refreshTokenCreate(int): string
        {static} +refreshTokenRotate(string): array
    }

    class Auth {
        {static} +registerUser(string, string, string): array
        {static} +loginUser(string, string): array
        {static} +getCurrentUser(): ?array
        {static} +validateRegistrationInput(): array
        {static} +setAuthCookies(): void
        {static} +clearAuthCookies(): void
    }
}

' ===========================
' API LAYER
' ===========================
package "API" #FFD966 {
    class APIRouter {
        {static} +route(string): void
        {static} +getEffectivePermissionNames(int): array
        {static} +getEffectivePermissionsDetailed(int): array
        {static} +respond(int, array): void
        {static} +getBody(): array
    }
}

' ===========================
' VIEW LAYER
' ===========================
package "Views" #F4CCCC {
    class Login {
        +handleRequest(): void
    }

    class Register {
        +handleRequest(): void
    }

    class Dashboard {
        +renderMarket(): void
        +renderPortfolio(): void
        +renderAlerts(): void
    }

    class Profile {
        +renderProfile(): void
    }
}

' ===========================
' RELATIONSHIPS
' ===========================

Database ..> User : "accede"
Database ..> Role : "accede"
Database ..> Permission : "accede"
Database ..> Portfolio : "accede"
Database ..> Alert : "accede"
Database ..> MarketData : "accede"
Database ..> RefreshToken : "accede"

Auth ..> Database : "usa"
Auth ..> User : "legge/crea"
Auth ..> RefreshToken : "gestisce"
Auth ..> Role : "legge"

JWT ..> Database : "usa"
JWT ..> RefreshToken : "gestisce"

APIRouter ..> Auth : "usa"
APIRouter ..> Permission : "legge"
APIRouter ..> Database : "usa"

Login --> Auth : "chiama"
Register --> Auth : "chiama"
Dashboard --> Auth : "verifica"
Dashboard --> Portfolio : "legge"
Dashboard --> MarketData : "legge"
Dashboard --> Alert : "legge"

Profile --> Auth : "verifica"
Profile --> User : "legge"

User --> Role : "ha\n1 : *"
Portfolio --> PortfolioItem : "contiene\n1 : *"
Alert --> MarketData : "monitora"

@enduml
